<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="app_version">1.0</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="conform_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="registration">Registration</string>
    <string name="ticket_booking">Ticket Booking</string>
    <string name="search">Search</string>
    <string name="select_transport">Select Transport</string>
    <string name="pickup_point">Boarding Point</string>
    <string name="drop_off_point">Alighting Point</string>
    <string name="select_bus_type">Select Service Type</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="user_id">User ID</string>
    <string name="age">Age</string>
    <string name="error_first_name">Please enter valid first name.</string>
    <string name="error_last_name">Please enter valid last name.</string>
    <string name="error_user_id">Please enter valid user id.</string>
    <string name="error_mobile">Please enter valid mobile number.</string>
    <string name="error_mail">Please enter valid email id.</string>
    <string name="error_password">Please enter valid password.</string>
    <string name="error_conformation_password">Please enter valid conformation password.</string>
    <string name="error_mismatch_password">Password mismatched</string>
    <string name="user_name_cannot_be_empty">User Name cannot be Empty</string>
    <string name="password_cannot_be_empty">Password cannot be Empty</string>
    <string name="message">Message</string>
    <string name="book_now">Book Now</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="booking_history">Booking History</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="live_tickets">Live Tickets</string>
    <string name="no_information_available">No Information Available</string>
    <string name="select_bus_service">Select Bus Operator</string>
    <string name="select_drop_point">Select Drop Point</string>
    <string name="selected_pickup_point">Select Pick Up Point</string>
    <string name="select_bus">Select Bus</string>
    <string name="select_bus_stop">Select Bus Stop</string>
    <string name="to">to</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="success">success</string>
    <string name="my_profile">My Profile</string>
    <string name="dob">Date Of Birth</string>
    <string name="address">Full House Address</string>
    <string name="address2">Address 2</string>
    <string name="pin">Pin Code</string>
    <string name="state">State</string>
    <string name="profile">profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="passenger_details">Passenger DetailS</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="confirm_ticket">Confirm Ticket</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="please_enter_your_stop_name">Please enter your stop name</string>
    <string name="booking_successful">Booking Successful</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="bus_type">Bus Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fare">Fare</string>
    <string name="service_charge_or_gst">Service Charge</string>
    <string name="total_fare">Total Fare</string>
    <string name="book_again">Book Again</string>
    <string name="go_to_home">Go To Home</string>
    <string name="adults">Adults</string>
    <string name="child">Child</string>
    <string name="sr_citizen">Sr Citizen</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="try_again">Try Again</string>
    <string name="payment_failed_description">It looks like your network is not stable. Your payment transaction failed, do you want to try again?</string>
    <string name="colon">:</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="error_enter_otp">Please enter a valid otp number</string>
    <string name="error_mobile_number">Please enter valid mobile number.</string>
    <string name="is_edit">IS_EDIT</string>
    <string name="get_details_from_my_profile">Get details from My Profile</string>
    <string name="close">Close</string>
    <string name="adult">Adult</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="have_a_concession_code_apply_here">Have a Concession code? Apply here!</string>
    <string name="apply">Apply</string>
    <string name="concession_code_removed_desc">Concession code removed. Please enter the Concession code again to avail offer.</string>
    <string name="enter_concession_code">Enter Concession code</string>
    <string name="concession_code">Concession Code</string>
    <string name="concession_type">Concession Type</string>
    <string name="select_concession_type">Select Concession Type</string>
    <string name="add_passenger">Add Passenger</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_concession">Please Select Concession</string>
    <string name="date_of_birth_cannot_be_empty">Date of Birth cannot be Empty</string>
    <string name="full_address_cannot_be_empty">Full Address cannot be Empty</string>
    <string name="street_address_cannot_be_empty">Street Address cannot be Empty</string>
    <string name="state_address_cannot_be_empty">State cannot be Empty</string>
    <string name="pin_code_address_cannot_be_empty">Pin Code cannot be Empty</string>
    <string name="search_concession_type">Search Concession Type</string>
    <string name="select_concession">Select Concession</string>
    <string name="please_enter_passenger_details">Please enter Passenger Details</string>
    <string name="fare_details">Fare Details</string>
    <string name="Adult">Adult</string>
    <string name="children">Children</string>
    <string name="sr_citizens">Sr Citizens</string>
    <string name="booking_success">Booking Success</string>
    <string name="booking_status">Booking Status</string>
    <string name="profile_image">Profile Image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_current_password">Current Password</string>
    <string name="enter_new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="error_new_password">New password is same as the current password.</string>
    <string name="resend">Resend</string>
    <string name="update">Update</string>
    <string name="generate">Generate</string>
    <string name="approved">Approved</string>
    <string name="expires_in">Expires in</string>
    <string name="minutes">Minutes</string>
    <string name="pending">Pending</string>
    <string name="expired">Expired</string>
    <string name="rejected">Rejected</string>
    <string name="validate">Validate</string>
    <string name="bus_details">Bus Details</string>
    <string name="passenger">Passenger</string>
    <string name="concession">Concession</string>
    <string name="country">India</string>
    <string name="currency">INR</string>
    <string name="name">Name</string>
    <string name="name_cannot_be_empty">Name cannot be Empty</string>
    <string name="feature_availability_msg">Please wait, this feature will available soon</string>
    <string name="current_booking">Mobile Ticketing</string>
    <string name="advance_booking">Advance Booking</string>
    <string name="travel_pulse">Travel Pulse</string>
    <string name="e_commerce">E Commerce</string>
    <string name="welcome">Welcome</string>
    <string name="services_home">Services Home</string>
    <string name="status_approved">Your ticket has been approved successfully</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="error_address_one">full house address is required</string>
    <string name="error_address_district">The District field is required.</string>
    <string name="error_state">The State field is required.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="password_should_be_eight_characters">Password should be 8 character </string>
    <string name="confirm_password_should_be_eight_characters">Confirm Password should be 8 character </string>
    <string name="error_enter_mobile_and_password">enter mobile no and password</string>
    <string name="error_profile_image">Profile Image is Required.</string>
    <string name="district">District</string>
    <string name="first_time_user_logged_in">First Time User Logged In</string>
    <string name="un_used">UnUsed</string>
    <string name="validate_mail">Validate Mail</string>
    <string name="ticket_expire_message">This ticket will expired in 3 hrs and  refund will be provided within 2 working days</string>
    <string name="select_pick_up_point">Select Pick up Point</string>
    <string name="internet_fail">Please turn on internet connection</string>
    <string name="amount">Please Enter Amount</string>
    <string name="add_money">Add Money</string>
    <string name="top_up_wallet">Topup Wallet</string>
    <string name="amount_cannot_be_empty">Amount can not be Empty</string>
    <string name="invalid_amount">Please Enter Correct Amount</string>
    <string name="Exceed_amount">"You have exceed amount limit. You can add money into wallet up to Rs.10000.00 "</string>

    <string name="amount_should_greater_than_zero">Amount should be greater than 0</string>
    <string name="server_connection_failed">Server not responding please try again !!!</string>
    <string name="my_wallet_balance">My Wallet Balance</string>
    <string name="ticket_expired_time">180</string>
    <string name="Rs">\u20B9</string>
</resources>