<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ticket_booking"
            android:icon="@drawable/ticket"
            android:title="@string/book_ticket" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/booking_history"
            android:title="@string/booking_history" />
        <item
            android:id="@+id/nav_my_ticket"
            android:icon="@drawable/booking_history"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/question"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/back_arrow"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>