<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".authentication.views.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        tools:context=".authentication.views.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/first_name"
                style="@style/text_view"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/first_name"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/last_name"
                style="@style/text_view"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/last_name"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_id"
                style="@style/text_view"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/user_id"
                android:inputType="text"
                android:visibility="gone" />
            <androidx.appcompat.widget.AppCompatTextView
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/user_id"
                style="@style/edit_text"
                android:text="MAIL"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mobile_no"
                style="@style/text_view"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email"
                style="@style/text_view"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dob"
                style="@style/text_view"
                android:drawableStart="@drawable/calendar"
                android:hint="@string/dob"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/address1"
                style="@style/text_view"
                android:drawableStart="@drawable/home"
                android:hint="@string/address"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/address2"
                style="@style/text_view"
                android:drawableStart="@drawable/home"
                android:hint="@string/address2"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/state"
                style="@style/text_view"
                android:drawableStart="@drawable/state"
                android:hint="@string/state"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pin_code"
                style="@style/text_view"
                android:drawableStart="@drawable/pin_code"
                android:hint="@string/pin"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile"
        style="@style/button_gray"
        android:layout_alignParentBottom="true"
        android:text="@string/edit_profile" />
</RelativeLayout>