<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".authentication.views.RegistrationFragment">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_above="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.views.LoginFragment">
        <LinearLayout
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_name"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/first_name"
                android:inputType="text"
                style="@style/edit_text"
                android:drawableLeft="@drawable/user_thumb" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/last_name"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/last_name"
                android:inputType="text"
                style="@style/edit_text"
                android:drawableLeft="@drawable/user_thumb" />

            <androidx.appcompat.widget.AppCompatEditText
                android:visibility="gone"
                android:id="@+id/user_id"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/user_id"
                android:inputType="text"
                style="@style/edit_text"
                android:drawableLeft="@drawable/user_thumb" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mobile_no"
                android:maxLength="10"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/mobile_number"
                android:inputType="number"
                style="@style/text_view"
                android:drawableLeft="@drawable/user_thumb" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                style="@style/text_view"
                android:drawableLeft="@drawable/user_thumb" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dob"
                android:drawableLeft="@drawable/calendar"
                android:hint="@string/dob"
                android:inputType="text"
                style="@style/text_view"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/address1"
                android:drawableLeft="@drawable/home"
                android:hint="@string/address"
                android:inputType="textPassword"
                style="@style/edit_text"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/address2"
                android:drawableLeft="@drawable/home"
                android:hint="@string/address2"
                android:inputType="textPassword"
                style="@style/edit_text"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/state"
                android:drawableLeft="@drawable/state"
                android:hint="@string/state"
                android:inputType="textPassword"
                style="@style/edit_text"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pin_code"
                android:drawableLeft="@drawable/pin_code"
                android:hint="@string/pin"
                android:inputType="textPassword"
                style="@style/edit_text"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_profile"
        android:text="@string/save_profile"
        android:layout_alignParentBottom="true"
        style="@style/button_gray"/>
</RelativeLayout>