<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".authentication.views.RegistrationFragment">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_above="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.views.LoginFragment">

        <LinearLayout
            android:layout_gravity="top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/first_name"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/first_name"
                style="@style/edit_text"
                android:inputType="textCapWords" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/last_name"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/last_name"
                style="@style/edit_text"
                android:inputType="textCapWords" />

            <androidx.appcompat.widget.AppCompatEditText
                android:visibility="gone"
                android:id="@+id/user_id"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/user_id"
                style="@style/edit_text"
                android:inputType="textCapWords" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobile_no"
                android:maxLength="10"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/mobile_number"
                style="@style/edit_text"
                android:inputType="phone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:drawableStart="@drawable/user_thumb"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                style="@style/edit_text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                style="@style/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock_thumb" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/conform_password"
                style="@style/edit_text"
                android:hint="@string/conform_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock_thumb" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration"
        style="@style/button_gray"
        android:layout_above="@+id/forgot_password"
        android:text="@string/registration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password"
        style="@style/button_text"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:visibility="invisible" />
</RelativeLayout>