<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.views.AuthenticationActivity">

    <LinearLayout
        android:background="@drawable/login_body_bg"
        android:translationZ="90dp"
        android:layout_marginTop="260dp"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobile_number"
            android:drawableStart="@drawable/user_thumb"
            android:hint="@string/mobile_number"
            android:maxLength="10"
            android:visibility="gone"
            android:inputType="numberSigned"
            style="@style/edit_text"
            android:drawableLeft="@drawable/user_thumb" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/old_password"
            android:drawableStart="@drawable/user_thumb"
            android:hint="@string/enter_current_password"
            android:maxLength="10"
            android:inputType="textPassword"
            style="@style/edit_text"
            android:drawableLeft="@drawable/user_thumb" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/new_password"
            android:drawableStart="@drawable/user_thumb"
            android:hint="@string/enter_new_password"
            android:maxLength="10"
            android:inputType="textPassword"
            style="@style/edit_text"
            android:drawableLeft="@drawable/user_thumb" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password"
            android:drawableStart="@drawable/user_thumb"
            android:hint="@string/conform_password"
            android:maxLength="10"
            android:inputType="textPassword"
            style="@style/edit_text"
            android:drawableLeft="@drawable/user_thumb" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_password"
            android:text="@string/update"
            style="@style/button_gray"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/header_img"
        android:src="@drawable/login_top_bg"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="290dp"/>
</RelativeLayout>
